--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <distributionManagement>
+   <repository>
+     <id>github</id>
+     <name>GitHub OWNER Apache Maven Packages</name>
+     <url>https://maven.pkg.github.com/OJS-20011114</url>
+   </repository>
+</distributionManagement>
     <dependencies>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
